--- a/ui5/eventDisplay.html
+++ b/ui5/eventDisplay.html
@@ -1,65 +1,57 @@
-   <!DOCTYPE html>
-   <html lang="en">
-   <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <title>Eve7</title>
-   <script type="text/javascript" src="jsrootsys/scripts/JSRootCore.js"></script>
-   <style>
-   html { height: 100%; }
-body { min-height: 100%; margin: 0; overflow: hidden }
-#EveDiv {
-   position: absolute;
-   left: 0;
-   top: 0;
-   bottom: 0;
-   right: 0;
-   padding: 1
-}
-</style>
 
-</head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+	<meta charset="UTF-8">
+	<title>Eve7 test</title>
+	<script type="text/javascript" src="jsrootsys/scripts/JSRoot.core.js"></script>
+	<style>
+         html { height: 100%; }
+         body { min-height: 100%; margin: 0; overflow: hidden }
+         #EveDiv {
+             position: absolute;
+             left: 0;
+             top: 0;
+             bottom: 0;
+             right: 0;
+             padding: 1
+         }
+	</style>
 
-   <body>
-   <div id="EveDiv">
-   loading scripts...
-   </div>
+    </head>
 
-   <script type='text/javascript'>
+    <body>
+	<div id="EveDiv">
+            loading scripts...
+	</div>
 
-function InitUI(handle) {
-   sap.ui.loader.config({
-      paths: {
-         custom: "mydir/",
-      }
-   });
-   sap.ui.require(["sap/ui/core/ComponentContainer"], function(ComponentContainer) {
-      new ComponentContainer({
-         name: "custom",
-         manifest: true,
-         async: true,
-         settings: {
-            componentData: {
-               conn_handle: handle
-            }
-         },
-         height: "100%"
-      }).placeAt("EveDiv")
-   });
-}
+	<script type='text/javascript'>
 
-if (JSROOT.GetUrlOption('nogl')!==null) JSROOT.gStyle.NoWebGL = true;
-if (JSROOT.GetUrlOption('libs')!==null) JSROOT.use_full_libs = true;
+         JSROOT.connectWebWindow({
+             prereq: "painter;openui5",
+             prereq_logdiv: "EveDiv",
+             openui5libs: "sap.ui.core" // customize openui5 libs
+         }).then(handle => {
+             sap.ui.loader.config({ paths: { custom: "mydir/" } });  // used for offline
 
-JSROOT.ConnectWebWindow({
-   prereq: "openui5",
-   openui5libs: "sap.ui.core", // customize openui5 libs
-   prereq_logdiv: "EveDiv",
-   callback: InitUI
-});
+             sap.ui.require(["sap/ui/core/ComponentContainer"], ComponentContainer => {
+		 new ComponentContainer({
+                     name: "custom",
+                     manifest: true,
+                     async: true,
+                     settings: {
+			 componentData: {
+                             conn_handle: handle
+			 }
+                     },
+                     height: "100%"
+		 }).placeAt("EveDiv")
+             });
 
-</script>
-   
-</body>
-   
-</html>
+         });
+
+        </script>
+
+    </body>
+
+</html
