--- a/ui5/eventDisplay.html
+++ b/ui5/eventDisplay.html
@@ -21,37 +21,38 @@
     </head>
 
     <body>
-	<div id="EveDiv">
-            loading scripts...
-	</div>
-
-	<script type='text/javascript'>
-
-         JSROOT.connectWebWindow({
-             prereq: "painter;openui5",
-             prereq_logdiv: "EveDiv",
-             openui5libs: "sap.ui.core" // customize openui5 libs
-         }).then(handle => {
-             sap.ui.loader.config({ paths: { custom: "mydir/" } });  // used for offline
-
-             sap.ui.require(["sap/ui/core/ComponentContainer"], ComponentContainer => {
-		 new ComponentContainer({
-                     name: "custom",
-                     manifest: true,
-                     async: true,
-                     settings: {
-			 componentData: {
-                             conn_handle: handle
-			 }
-                     },
-                     height: "100%"
-		 }).placeAt("EveDiv")
-             });
-
-         });
-
-        </script>
-
-    </body>
-
-</html
+        <div id="EveDiv">
+        </div>
+     </body>
+  
+     <script type='module'>
+  
+        import { source_dir } from '/jsrootsys/modules/core.mjs';
+        import { connectWebWindow } from '/jsrootsys/modules/webwindow.mjs';
+        import { initEVE } from '/rootui5sys/eve7/eve.mjs';
+  
+        initEVE(source_dir).then(() => connectWebWindow({
+           // socket_kind: "file",  // used for offline
+           ui5: true,
+           //  openui5src: "https://openui5.hana.ondemand.com/1.98.0/",
+           openui5libs: "sap.ui.core" // customize openui5 libs
+        })).then(handle => {
+           sap.ui.loader.config({ paths: { custom: "mydir/" } });
+           sap.ui.require(["sap/ui/core/ComponentContainer"], ComponentContainer => {
+              new ComponentContainer({
+                 name: "custom",
+                 manifest: true,
+                 async: true,
+                 settings: {
+                    componentData: {
+                       conn_handle: handle
+                    }
+                 },
+                 height: "100%"
+              }).placeAt("EveDiv")
+           });
+        });
+  
+     </script>
+  
+  </html>
